--- a/templates/index.html
+++ b/templates/index.html
@@ -136,9 +136,9 @@
                       <div class="row">
                         <div class="col-lg-4 d-flex justify-content-center">
                           <img
-                            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRCon2UgnNzwVRsBNlEoJb8CoUUgaqH_sM2yQ&usqp=CAU"
+                            src="static/img/Dev.jpg"
                             class="shadow-1 mb-4 mb-lg-0"
-                            alt="woman avatar"
+                            alt="Dev"
                             width="150"
                             height="150"
                           />
@@ -148,8 +148,21 @@
                         >
                           <h4 class="mb-4">Dev Sanghvi</h4>
                           <p class="mb-0 pb-3">
-                            [Dev's introduction and experience placeholder]
+                            3rd year student from Adani University.
                           </p>
+                          <!-- Adding social media icons -->
+                          <div class="mt-3">
+                            <a href="https://github.com/Dv04" target="_blank">
+                              <i class="fab fa-github fa-2x" style="color: black"></i>
+                            </a>
+                            <a
+                              href="https://www.linkedin.com/in/dev-sanghvi-616843128/"
+                              target="_blank"
+                              class="ml-3"
+                            >
+                              <i class="fab fa-linkedin fa-2x" style="color: black"></i>
+                            </a>
+                          </div>
                         </div>
                       </div>
                     </div>
@@ -163,36 +176,9 @@
                       <div class="row">
                         <div class="col-lg-4 d-flex justify-content-center">
                           <img
-                            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRCon2UgnNzwVRsBNlEoJb8CoUUgaqH_sM2yQ&usqp=CAU"
+                            src="static/img/Madhur.png"
                             class="shadow-1 mb-4 mb-lg-0"
-                            alt="woman avatar"
-                            width="150"
-                            height="150"
-                          />
-                        </div>
-                        <div
-                          class="col-9 col-md-10 col-lg-7 col-xl-8 text-center text-lg-start mx-auto mx-lg-0"
-                        >
-                          <h4 class="mb-4">Madhur Prajapati</h4>
-                          <p class="mb-0 pb-3">
-                            [Madhur's introduction and experience placeholder]
-                          </p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-
-                <!-- Single item -->
-                <div class="carousel-item">
-                  <div class="row d-flex justify-content-center">
-                    <div class="col-lg-10 col-xl-8">
-                      <div class="row">
-                        <div class="col-lg-4 d-flex justify-content-center">
-                          <img
-                            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRCon2UgnNzwVRsBNlEoJb8CoUUgaqH_sM2yQ&usqp=CAU"
-                            class="shadow-1 mb-4 mb-lg-0"
-                            alt="woman avatar"
+                            alt="Madhur"
                             width="150"
                             height="150"
                           />
@@ -200,10 +186,26 @@
                         <div
                           class="col-9 col-md-9 col-lg-7 col-xl-8 text-center text-lg-start mx-auto mx-lg-0"
                         >
-                          <h4 class="mb-4">Heet Vekariya</h4>
+                          <h4 class="mb-4">Madhur Prajapati</h4>
                           <p class="mb-0 pb-3">
-                            [Heet's introduction and experience placeholder]
+                            3rd year student from Adani University.
                           </p>
+                          <!-- Adding social media icons -->
+                          <div class="mt-3">
+                            <a
+                              href="https://github.com/MysteryManav"
+                              target="_blank"
+                            >
+                              <i class="fab fa-github fa-2x" style="color: black"></i>
+                            </a>
+                            <a
+                              href="https://www.linkedin.com/in/madhur-prajapati-228b2a220/"
+                              target="_blank"
+                              class="ml-3"
+                            >
+                              <i class="fab fa-linkedin fa-2x" style="color: black"></i>
+                            </a>
+                          </div>
                         </div>
                       </div>
                     </div>
@@ -217,9 +219,9 @@
                       <div class="row">
                         <div class="col-lg-4 d-flex justify-content-center">
                           <img
-                            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRCon2UgnNzwVRsBNlEoJb8CoUUgaqH_sM2yQ&usqp=CAU"
+                            src="static/img/Naimish.jpeg"
                             class="shadow-1 mb-4 mb-lg-0"
-                            alt="woman avatar"
+                            alt="Naimish"
                             width="150"
                             height="150"
                           />
@@ -229,8 +231,70 @@
                         >
                           <h4 class="mb-4">Naimish Bhuva</h4>
                           <p class="mb-0 pb-3">
-                            [Naimish's introduction and experience placeholder]
+                            3rd year student from Adani University.
                           </p>
+                          <!-- Adding social media icons -->
+                          <div class="mt-3">
+                            <a
+                              href="https://github.com/naimish73"
+                              target="_blank"
+                            >
+                              <i class="fab fa-github fa-2x" style="color: black"></i>
+                            </a>
+                            <a
+                              href="https://www.linkedin.com/in/naimishbbhuva/"
+                              target="_blank"
+                              class="ml-3"
+                            >
+                              <i class="fab fa-linkedin fa-2x" style="color: black"></i>
+                            </a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <!-- Single item -->
+                <div class="carousel-item">
+                  <div class="row d-flex justify-content-center">
+                    <div class="col-lg-10 col-xl-8">
+                      <div class="row">
+                        <div class="col-lg-4 d-flex justify-content-center">
+                          <img
+                            src="static/img/Heet.jpg"
+                            class="shadow-1 mb-4 mb-lg-0"
+                            alt="Heet"
+                            width="150"
+                            height="150"
+                          />
+                        </div>
+                        <div
+                          class="col-9 col-md-9 col-lg-7 col-xl-8 text-center text-lg-start mx-auto mx-lg-0"
+                        >
+                          <h4 class="mb-4">Heet Vekariya</h4>
+                          <p class="mb-0 pb-3">
+                            3rd year student from Adani University.
+                          </p>
+                          <!-- Adding social media icons -->
+                          <div class="mt-3">
+                            <a
+                              href="https://github.com/HeetVekariya"
+                              target="_blank"
+                            >
+                              <i class="fab fa-github fa-2x" style="color: black"></i>
+                            </a>
+                            <a
+                              href="https://www.linkedin.com/in/heet-vekariya-16326024b/"
+                              target="_blank"
+                              class="ml-3"
+                            >
+                              <i
+                                class="fab fa-linkedin fa-2x"
+                                style="color: black"
+                              ></i>
+                            </a>
+                          </div>
                         </div>
                       </div>
                     </div>
