almost final final changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
               <!-- here is where they add the ICON -->
               <a href="#" style="text-decoration: none; color: black">
                 <img
-                  src="/static/Images/Screenshot_2022-12-05_160757.jpg"
+                  src="https://amtcorp.org/wp-content/uploads/2023/05/HMIS-Login-Portal.png"
                   alt="..."
                   class="rounded h-50 w-75"
                 />
@@ -47,7 +47,7 @@
               <!-- here is where they add the ICON -->
               <a href="#" style="text-decoration: none; color: black">
                 <img
-                  src="/static/Images/Untitled_designsdfn.jpg"
+                  src="https://play-lh.googleusercontent.com/y8jjOCF86NGyplHLc80NlxmT8tIR1VNydLOZqfqU2bWiA27btvKyuGDwp-0lyeSgGVk"
                   alt="..."
                   class="rounded h-50 w-75"
                 />
@@ -64,7 +64,7 @@
               <!-- here is where they add the ICON -->
               <a href="#" style="text-decoration: none; color: black">
                 <img
-                  src="/static/Images/AIER-AU-MOU-2.jpg"
+                  src="https://5.imimg.com/data5/SELLER/Default/2022/10/MU/JH/GU/94026011/hospital-erp-care-hmis-500x500.jpg"
                   alt="..."
                   class="rounded h-50 w-75"
                 />
