--- a/templates/staff.html
+++ b/templates/staff.html
@@ -17,9 +17,7 @@
                             <strong>Speciality:</strong> {{ doctors.speciality }}<br>
                             <strong>Email:</strong> {{ doctors.email }}<br>
                             <strong>Employee id:</strong> {{ doctors.employee_id }}<br>
-                            <strong>Phone number:</strong> {{ doctors.phone_number }}<br>
-                            <strong>Previous Medical History:</strong> {{ doctors.previous_medical_history }}<br>
-  
+                            <strong>Phone number:</strong> {{ doctors.phone_number }}
                             <!-- Add more doctors information fields as needed -->
                         </p>
                     </div>
