Enhance CSS in about.html and login.html file. also fixed the issuse of accessiblity on various devices and screen sizes in these files

--- a/templates/about.html
+++ b/templates/about.html
@@ -90,6 +90,22 @@
         .footer {
             margin-top: 90px;
         }
+        .center-text {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align : justify;
+        }
+
+        .heading-text{
+            font-family: 'Open Sans', sans-serif;
+            font-size : calc(16px + 1vw);
+        }
+
+        .head{
+            font-family: 'Montserrat', sans-serif;
+            font-size : calc(16px + 1vw);
+        }
     </style>
 
     <div class="about-us">
@@ -99,8 +115,8 @@
     <div class="content">
         <section class="info-section">
             <div class="info-left">
-                <h2>Introduction</h2>
-                <p>In the dynamic healthcare landscape, efficient information and resource management are vital for quality patient care. This project introduces a state healthcare-specific Health Management Information System (HMIS). This innovative HMIS centralizes patient data, employs AI/ML, and caters to various user roles, aiming to transform healthcare management.</p>
+                <h2 class="heading-text">Introduction</h2>
+                <p class="center-text">In the dynamic healthcare landscape, efficient information and resource management are vital for quality patient care. This project introduces a state healthcare-specific Health Management Information System (HMIS). This innovative HMIS centralizes patient data, employs AI/ML, and caters to various user roles, aiming to transform healthcare management.</p>
             </div>
             <div class="info-right">
                 <img src="./../static/img/about-us-1.jpg" alt="About us first">
@@ -114,8 +130,8 @@
                 <img src="./../static/img/about-us-2.jpg" alt="About us second">
             </div>
             <div class="info-left">
-                <h2>Problem Statement</h2>
-                <p>State healthcare facilities encounter issues with HMIS adoption, including low rates, fragmented data, inefficient record-keeping, limited predictive abilities, patient disengagement, and resource management. This project seeks to overcome these barriers and facilitate HMIS adoption by healthcare professionals.</p>
+                <h2 class="heading-text">Problem Statement</h2>
+                <p class="center-text">State healthcare facilities encounter issues with HMIS adoption, including low rates, fragmented data, inefficient record-keeping, limited predictive abilities, patient disengagement, and resource management. This project seeks to overcome these barriers and facilitate HMIS adoption by healthcare professionals.</p>
             </div>
         </section>
     </div>
