--- a/templates/login.html
+++ b/templates/login.html
@@ -1,3 +1,9 @@
+{% extends 'base.html' %}
+{% import "bootstrap/wtf.html" as wtf %}
+
+{% block title %}Login{% endblock title %}
+
+{% block body %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -64,16 +70,21 @@
 </head>
 <body>
 <div class="login-container">
-    <h2>Login</h2>
+    <h2>Sign In</h2>
     <form>
-        <input type="text" placeholder="Username" required>
-        <input type="password" placeholder="Password" required>
-        <button type="submit">Sign In</button>
+        <input id="Email" type="text" placeholder="Email" required>
+        <input id="Password" type="password" placeholder="Password" required>
+        <select id="role" style="margin-bottom: 15px; margin-top : 10px ">
+            <option value="" disabled selected>Role</option>
+            <option value="Doctor">Doctor</option>
+        </select>
+        <button type="submit">Login In</button>
     </form>
-    <p>Don't have an account? <a href="#" class="signup-link">Sign Up</a></p>
+    <p>Yet to register?<a href="#" class="signup-link">Sign Up</a></p>
 </div>
 </body>
 </html>
+{% endblock body %}
 
 <!--{% extends 'base.html' %}
 {% import "bootstrap/wtf.html" as wtf %}
